--- a/wasm-experiments/inline-diff-plugin/Cargo.toml
+++ b/wasm-experiments/inline-diff-plugin/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2024"
 [dependencies]
 similar = "2.5.0"
 wasm-minimal-protocol = "0.1.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [lib]
 crate-type = ["cdylib"]
